# wincap11

./: .gitignore  CMakeLists.txt  README.md  installer.nsi
cmake/: GitUtils.cmake
src/: main.cpp
src/ui/: mainwindow.cpp  mainwindow.h  mainwindow.ui  qpictureview.cpp  qpictureview.h  stylesheet.h
src/util/: ScreenshotUtil.cpp  ScreenshotUtil.h  Version.h.in
